[workspace]
resolver = "2"
members = [
  "dylib_interface",
  "host",
  "module",
  "shared",
  "crate_compilation_info",
  "testing/shared",
  "testing/host",
  "testing/module",
  "define_module_export", "testing/define_module_export", 
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/xxshady/dylib-reload"
readme = "README.md"
rust-version = "1.82.0"

[workspace.dependencies]
libc = "0.2.164"
libloading = "0.8.6"
