[package]
name = "dylib_interface"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true

[dependencies]
prettyplease = "0.2.25"
proc-macro2 = "1.0.92"
quote = "1.0.37"

[dependencies.syn]
version = "2.0.89"
features = ["full"]

