[package]
name = "dylib_interface"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true

[features]
build = ["dep:prettyplease", "dep:proc-macro2", "dep:quote", "dep:syn"]

[dependencies.prettyplease]
optional = true
version = "0.2.25"

[dependencies.proc-macro2]
optional = true
version = "1.0.92"

[dependencies.quote]
optional = true
version = "1.0.37"

[dependencies.syn]
optional = true
version = "2.0.89"
features = ["full"]
