[package]
name = "relib_exportify"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true

[dependencies]
proc-macro2 = "1.0.78"
quote = "1.0.35"
relib_internal_shared = { version = "0.1.0", path = "../shared" }
syn = { version = "1.0.109", features = ["full"] }
