[package]
name = "dylib_reload_host"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true

[dependencies]
libc.workspace = true
libloading = "0.8.5"
stabby.workspace = true
thiserror = "2.0.3"

[dependencies.dylib_reload_shared]
version = "=0.1.0"
path = "../shared"

[build-dependencies]
dylib_interface = { version = "0.1.0", path = "../dylib_interface" }

[lints.clippy]
unwrap_used = "forbid"
