[package]
name = "dylib_reload_host"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true

[dependencies]
libloading.workspace = true
thiserror = "2.0.3"
thread-id.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
libc.workspace = true

[dependencies.dylib_reload_shared]
version = "=0.1.0"
path = "../shared"

[dependencies.dylib_interface]
version = "0.1.0"
path = "../dylib_interface"
features = ["normal"]

[dependencies.crate_compilation_info]
version = "=0.1.0"
path = "../crate_compilation_info"
features = ["normal"]

[build-dependencies]

[build-dependencies.dylib_interface]
version = "0.1.0"
path = "../dylib_interface"
features = ["build"]

[build-dependencies.dylib_reload_shared]
version = "=0.1.0"
path = "../shared"

[build-dependencies.crate_compilation_info]
version = "=0.1.0"
path = "../crate_compilation_info"
features = ["build"]

[lints.clippy]
unwrap_used = "forbid"
