[package]
name = "dylib_reload_module"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true

[dependencies]
stabby.workspace = true
libc.workspace = true

[dependencies.shared]
version = "=0.1.0"
path = "../shared"
