[package]
name = "dylib_reload_module"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true

[dependencies]
stabby.workspace = true
libc.workspace = true

# // TEST
libc-print = "0.1.23"

[dependencies.dylib_reload_shared]
version = "=0.1.0"
path = "../shared"

[build-dependencies]
dylib_interface = { version = "0.1.0", path = "../dylib_interface" }
