[package]
name = "testing_define_module_export"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true

[dependencies]
define_module_export = { version = "0.1.0", path = "../../define_module_export" }

[lib]
proc-macro = true
