[package]
name = "test_host"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true

[dependencies]
dylib_reload_host = { version = "0.1.0", path = "../../host" }
libloading.workspace = true

[dependencies.testing_shared]
version = "=0.1.0"
path = "../shared"

[dependencies.dylib_interface]
version = "0.1.0"
path = "../../dylib_interface"
features = ["normal"]

[build-dependencies.dylib_interface]
version = "0.1.0"
path = "../../dylib_interface"
features = ["build"]

[build-dependencies.testing_shared]
version = "=0.1.0"
path = "../shared"
