[package]
name = "test-module"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
stabby.workspace = true
dylib-reload-module = { version = "0.1.0", path = "../../module" }
