[package]
name = "test_module"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
dylib_reload_module = { version = "0.1.0", path = "../../module" }
