[package]
name = "test_module"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
define_module_export = { version = "0.1.0", path = "../../define_module_export" }
dylib_reload_module = { version = "0.1.0", path = "../../module" }

[dependencies.testing_shared]
version = "=0.1.0"
path = "../shared"

[dependencies.dylib_interface]
version = "0.1.0"
path = "../../dylib_interface"
features = ["normal"]

[build-dependencies.dylib_interface]
version = "0.1.0"
path = "../../dylib_interface"
features = ["build"]

[build-dependencies.testing_shared]
version = "=0.1.0"
path = "../shared"
